--- a/DomL/Windows/BackupWindow.xaml
+++ b/DomL/Windows/BackupWindow.xaml
@@ -8,7 +8,7 @@
         Title="Backup Window" Height="450" Width="800">
     <DockPanel>
         <StackPanel>
-            <GroupBox Header="Backup">
+            <GroupBox Header="Backup From Database To File">
                 <DockPanel>
                     <StackPanel>
                         <StackPanel Orientation="Horizontal">
@@ -37,7 +37,7 @@
                     </StackPanel>
                 </DockPanel>
             </GroupBox>
-            <GroupBox Header="Restore">
+            <GroupBox Header="Restore From File To Database">
                 <DockPanel>
                     <StackPanel>
                         <Button Height="30" Width="80" Margin="5" Content="All" Click="AllRestoreButton_Click"/>
